# ZKID

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  SCAFFOLD_INTEGRATION_COMPLETE.md  TODO.md  environments.toml  links para projetos Stellar.md  package-lock.json  package.json  stellar.toml  vercel.json
.github/workflows/: ci.yml
circuits/: BUILD_GUIDE.md  README.md  age_verification.circom  country_verification.circom  example_age_input.json  income_threshold.circom
contracts/compliance-oracle/: Cargo.toml
contracts/credential-registry/: Cargo.toml
contracts/verifier/: Cargo.toml
deploy/: last_deploy.json
docs/: API_EXAMPLES.md  ARCHITECTURE.md  BUILD.md  COMPLETE_SYSTEM_OVERVIEW.md  CONTRACTS_IMPROVEMENTS.md  DEPLOY_SOROBAN.md  ELIZA_SETUP.md  FRONTEND_STRUCTURE.md  QUICKSTART.md  README.en.md  README.md  README.pt-BR.md  REQUIREMENTS.md  ROADMAP.md  SCAFFOLD_INTEGRATION_COMPLETE.md  VERCEL_DEPLOYMENT.md
docs/assets/: README.md
eliza_bot/: CLAUDE.md  README.md  build.ts  cypress.config.ts  package.json  tsconfig.build.tsbuildinfo
frontend/: VISUAL_TRANSFORMATION.md
frontend/zkid-app/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
infra/docker/: docker-compose.yml
scripts/: auto-deploy.sh  build-circuits.sh  compile-circuits.sh  deploy-with-identity.sh  set-vk-structured.mjs  set-vk.mjs  setup-circuit-tools.sh  start-all.sh  test-verify.mjs  update-contract-ids.sh
(+126 files in other folders)
