[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
authors = ["ZKID Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/zkid-stellar/zkid-stellar"
version = "0.1.0"

[workspace.dependencies.soroban-sdk]
version = "23.0.2"

# OpenZeppelin Stellar contracts (optional - se precisar)
[workspace.dependencies.stellar-access]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.5.1"

[workspace.dependencies.stellar-tokens]
git = "https://github.com/OpenZeppelin/stellar-contracts"
tag = "v0.5.1"

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"
